--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,16 @@
 }
 
 body{
-  background-image: url("../fondoTramado.jpg");
+  background-image: url("../img/fondoTramado.jpg");
+  background-size: cover;
 }
 
 .container{
   display: flex;
   flex-wrap: wrap;
-  width: 80%;
   margin: 0 auto;
   padding: 50px;
+  position: relative;
 }
 
 header{
@@ -23,7 +24,7 @@ header{
 
 ul{
   display: flex;
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 li{
@@ -35,4 +36,19 @@ a{
   text-decoration: none;
   color: #fff;
   font-size: 30px;
+}
+
+img{
+  margin: 30px auto;
+  width: 100%;
+}
+
+h1{
+  position: absolute;
+  color: #1BB9EC;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 120px;
+  line-height: 360px;
 }
