--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,6 @@ body{
   flex-wrap: wrap;
   margin: 0 auto;
   padding: 50px;
-  position: relative;
 }
 
 header{
@@ -32,23 +31,43 @@ li{
   margin-right: 50px;
 }
 
+ul li:last-child{
+  margin-right: 0px;
+}
+
 a{
   text-decoration: none;
   color: #fff;
   font-size: 30px;
+  text-transform: uppercase;
 }
 
 img{
-  margin: 30px auto;
+  margin: 35px auto;
   width: 100%;
+}
+
+.position{
+  position: relative;
 }
 
 h1{
   position: absolute;
-  color: #1BB9EC;
+  color: #c8dcde;
   width: 100%;
   text-align: center;
   text-transform: uppercase;
   font-size: 120px;
-  line-height: 360px;
+  line-height: 170%;
+}
+
+h2{
+  color: #fff;
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+
+h4{
+  color: #fff;
+  font-size: 30px;
 }
