--- a/css/styles.css
+++ b/css/styles.css
@@ -14,16 +14,18 @@ body{
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  padding: 50px;
+  padding: 0 50px;
 }
 
-header{
+.encabezado {
   width: 100%;
+  background-color: rgba(0, 0, 192, 0.4);
 }
 
 ul{
   display: flex;
   justify-content: flex-end;
+  padding: 30px 20px;
 }
 
 li{
@@ -49,16 +51,17 @@ img{
 
 .position{
   position: relative;
+  width: 100%;
 }
 
-h1{
+.position h1{
   position: absolute;
   color: #c8dcde;
   width: 100%;
   text-align: center;
   text-transform: uppercase;
   font-size: 120px;
-  line-height: 170%;
+  padding-top: 3%;
 }
 
 h2{
