--- a/css/styles.css
+++ b/css/styles.css
@@ -44,13 +44,13 @@ a{
   text-transform: uppercase;
 }
 
-img{
-  margin: 35px auto;
+.position{
+  position: relative;
   width: 100%;
 }
 
-.position{
-  position: relative;
+.position img{
+  margin: 35px auto;
   width: 100%;
 }
 
@@ -73,4 +73,31 @@ h2{
 h4{
   color: #fff;
   font-size: 30px;
+}
+
+.articulos {
+  width: 80%;
+  margin: 0 auto;
+  background-color: rgba(0, 0, 192, 0.4);
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.articulos .articulo {
+  width: 25%;
+  text-align: center;
+}
+
+.articulos .articulo h4 {
+  font-size: 20px;
+  margin: 0;
+  background-color: rgba(220, 220, 220, 0.4);
+  padding: 12px 0px;
+}
+
+.articulos .articulo img {
+  width: 100%;
 }
