--- a/css/styles.css
+++ b/css/styles.css
@@ -94,10 +94,17 @@ h4{
 .articulos .articulo h4 {
   font-size: 20px;
   margin: 0;
-  background-color: rgba(220, 220, 220, 0.4);
+  background-color: rgba(220, 220, 220, 0.3);
   padding: 12px 0px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .articulos .articulo img {
   width: 100%;
+}
+
+.productos h2 {
+  text-align: center;
+  margin-top: 50px;
 }
