--- a/css/styles.css
+++ b/css/styles.css
@@ -108,3 +108,38 @@ h4{
   text-align: center;
   margin-top: 70px;
 }
+
+.form{
+  margin: 30px auto;
+  width: 80%;
+}
+
+input{
+  width: 40%
+}
+
+.consulta{
+  height: 200px;
+}
+
+label{
+  color: #fff;
+  font-size: 18px;
+  display: block;
+  margin-bottom: 5px;
+  margin-top: 20px;
+}
+
+button{
+  background-color: #4D5DD3;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 15px;
+  padding: 10px;
+  margin-left: 30px;
+  width: 120px;
+  font-weight: bold;
+}
+ button.enviar{
+   margin-left: 0px;
+ }
